Closed
Bug 1289531
Opened 9 years ago
Closed 9 years ago
../../../../workspace/gecko/widget/gonk/nsAppShell.cpp:718:52: error: use of deleted function 'mozilla::gfx::IntParam<T>::IntParam(double) [with T = int]'
Categories
(Firefox OS Graveyard :: General, defect)
Tracking
(firefox50 fixed)
RESOLVED
FIXED
Tracking | Status | |
---|---|---|
firefox50 | --- | fixed |
People
(Reporter: b2g.bonstra, Assigned: b2g.bonstra)
References
Details
Attachments
(1 file)
1.13 KB,
patch
|
nical
:
review+
|
Details | Diff | Splinter Review |
../../../mozilla-inbound/widget/gonk/nsAppShell.cpp: In function 'void addMultiTouch(mozilla::MultiTouchInput&, const android::NotifyMotionArgs*, int)':
../../../mozilla-inbound/widget/gonk/nsAppShell.cpp:718:52: error: use of deleted function 'mozilla::gfx::IntParam<T>::IntParam(double) [with T = int]'
floor(coords.getY() + 0.5));
^
In file included from ../../dist/include/mozilla/gfx/Rect.h:12:0,
from ../../dist/include/nsRect.h:14,
from ../../../mozilla-inbound/widget/nsIWidget.h:12,
from ../../dist/include/mozilla/BasicEvents.h:17,
from ../../dist/include/mozilla/MouseEvents.h:11,
from ../../dist/include/mozilla/dom/Touch.h:12,
from ../../dist/include/mozilla/TouchEvents.h:11,
from ../../../mozilla-inbound/widget/gonk/nsAppShell.cpp:39:
../../dist/include/mozilla/gfx/Point.h:58:3: note: declared here
MOZ_IMPLICIT IntParam(double val) = delete;
Attachment #8774933 -
Flags: review?(nical.bugzilla)
Updated•9 years ago
|
Attachment #8774933 -
Flags: review?(nical.bugzilla) → review+
Pushed by fdesre@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/a72c26964e28
Make float to int conversion explicit. r=nical
Updated•9 years ago
|
Assignee: nobody → b2g.bonstra
Comment 5•9 years ago
|
||
bugherder |
Status: UNCONFIRMED → RESOLVED
Closed: 9 years ago
status-firefox50:
--- → fixed
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•