Bug 1289531 - Make float to int conversion explicit. r=nical